@@ -1,0 +1,4 @@
+The goal of 'readr' is to provide a fast and friendly way to read
+rectangular data (like 'csv', 'tsv', and 'fwf'). It is designed to
+flexibly parse many types of data found in the wild, while still
+cleanly failing when data unexpectedly changes.
