@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3123 2019/07/31 13:48:46 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3124 2019/07/31 13:52:15 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5080,3 +5080,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added textproc/R-haven version 2.1.1 [brook 2019-07-31]
 	Added textproc/R-htmlTable version 1.13.1 [brook 2019-07-31]
 	Added textproc/R-openxlsx version 4.1.0.1 [brook 2019-07-31]
+	Added textproc/R-readr version 1.3.1 [brook 2019-07-31]
